ecmascript/parser/tests/test262-error-references/fail/95682e688db64065.js.stderr
error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/95682e688db64065.js:1:6
  |
1 | for (this of that);
  |      ^^^^

